--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>cinema-team1</groupId>
-  <artifactId>cinema-team1</artifactId>
+  <groupId>pruebaHibernate</groupId>
+  <artifactId>pruebaHibernate</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <build>
@@ -19,6 +19,8 @@
       </plugin>
     </plugins>
   </build>
+  
+  
 <dependencies>
 <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
     <dependency>
@@ -33,4 +35,5 @@
     <version>8.0.33</version>
     </dependency>
 </dependencies>
+  
 </project>
