--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
     <artifactId>mysql-connector-java</artifactId>
     <version>8.0.33</version>
     </dependency>
+    <dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.16.0</version>
+    </dependency>
 </dependencies>
   
 </project>
